package Interfaces;

public interface ComponenteInventario {
    void exibir();
    double getPesoTotal();
}
